--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
+    <!-- <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/> -->
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta content="Web site created using create-react-app" name="description"/>
-    <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
+    <!-- <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/> -->
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
